Fix galery image overlap over the header

--- a/web/app/themes/rizikove_kaceni_sage_based/assets/styles/pages/_gallery.scss
+++ b/web/app/themes/rizikove_kaceni_sage_based/assets/styles/pages/_gallery.scss
@@ -33,7 +33,7 @@
 }
 
 .foogallery-container{
-
+  z-index: 0 !important;
   img{
     @include square-dim(100%);
   }
